spring/micro-services/kubernetes/namespace-pega/db-service.yaml

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: db-service
  namespace: pega
  labels:
    app: db-service
    version: v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: db-service
    spec:
      containers:
        - name: db-service-pod
          image: pratik006/db-service:0.0.1-SNAPSHOT
          #imagePullPolicy: Always
          ports:
            - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: db-service
  namespace: pega
spec:
  selector:
    app: db-service
  ports:
    - name: http
      protocol: TCP
      # Which port on the node is the service available through?
      nodePort: 32002
      # Inside the cluster, what port does the service expose?
      port: 8080
      # Which port do pods selected by this service expose?
      targetPort: 8080
  type: LoadBalancer
