spring/micro-services/kubernetes/namespace-pega/mysql-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: pega
spec:
  #type: NodePort
  ports:
    - port: 3306
      #targetPort: 3306
      #nodePort: 31000
  selector:
    app: mysql
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: pega
spec:
  selector:
    matchLabels:
      app: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - image: mysql:5.7
          name: mysql
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-pv-claim
