spring/micro-services/kubernetes/namespace-pega/postgres.yaml

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: postgres
  namespace: pega
spec:
  replicas: 1
  template:
    metadata:
      namespace: pega
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:10.4
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgredb
      volumes:
        - name: postgredb
          persistentVolumeClaim:
            claimName: postgres-pv-claim

---


apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: pega
spec:
  ports:
  - port: 5432
  selector:
    app: postgres
  clusterIP: None
