spring/micro-services/kubernetes/namespace-pega/student-service.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: student-service
  namespace: pega
  labels:
    app: student-service
    version: v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: student-service
    spec:
      containers:
        - name: student-service-pod
          image: pratik006/student-service:0.0.1-SNAPSHOT
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: student-service
  namespace: pega
spec:
  selector:
    app: student-service
  ports:
    - name: http
      protocol: TCP
      # Which port on the node is the service available through?
      nodePort: 32001
      # Inside the cluster, what port does the service expose?
      port: 8080
      # Which port do pods selected by this service expose?
      targetPort: 8080
  type: LoadBalancer
