spring/micro-services/kubernetes/namespace-pega/istios-routing.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: fnx-gateway
  namespace: pega
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: student-service
  namespace: pega
spec:
  hosts:
  - "*"
  gateways:
  - fnx-gateway
  http:
  - match:
    - uri:
        prefix: /search
    route:
    - destination:
        port:
          number: 8080
        host: student-service.pega.svc.cluster.local
