spring/micro-services/kubernetes/namespace-pega/mutual-tls.yaml
apiVersion: "networking.istio.io/v1alpha3"
kind: "DestinationRule"
metadata:
  name: "student-service-istio-client-mtls"
  namespace: pega
spec:
  host: student-service.pega.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL

---

apiVersion: "networking.istio.io/v1alpha3"
kind: "DestinationRule"
metadata:
  name: "db-service-istio-client-mtls"
  namespace: pega
spec:
  host: db-service.pega.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
